--- a/style.css
+++ b/style.css
@@ -1,4 +1,6 @@
 #screen {
+    width: 100vw;
+    height: 56.25vw;
     margin: 0vw;
     padding: 0vw;
     position: relative;
@@ -7,12 +9,11 @@
 #menu_background {
     background-image: url(produktion/titelskaerm.svg);
     background-repeat: no-repeat;
-    background-size: 100vw;
+    background-size: 100%;
     width: 100vw;
-    height: 100vw;
+    height: 56.25vw;
     z-index: 5;
     position: absolute;
-    display: none;
 }
 
 #play {
@@ -25,8 +26,82 @@
     top: 24vw;
     left: 4vw;
     position: absolute;
-
 }
+
+.shake {
+    animation-name: shake_kf;
+    animation-duration: 4s;
+    animation-iteration-count: 1;
+    animation-timing-function: linear;
+    transform-origin: right;
+}
+
+@keyframes shake_kf {
+    0% {
+        transform: translateY(-100%);
+        opacity: 0;
+    }
+
+    5% {
+        transform: translateY(-100%);
+        opacity: 0;
+    }
+
+    15% {
+        transform: translateY(0);
+        padding-bottom: 5px;
+    }
+
+    30% {
+        transform: translateY(-50%);
+    }
+
+    40% {
+        transform: translateY(0%);
+        padding-bottom: 6px;
+    }
+
+    50% {
+        transform: translateY(-30%);
+    }
+
+    70% {
+        transform: translateY(0%);
+        padding-bottom: 7px;
+    }
+
+    80% {
+        transform: translateY(-15%);
+    }
+
+    90% {
+        transform: translateY(0%);
+        padding-bottom: 8px;
+    }
+
+    95% {
+        transform: translateY(-7%);
+    }
+
+    97% {
+        transform: translateY(0%);
+        padding-bottom: 9px;
+    }
+
+    99% {
+        transform: translateY(-3%);
+    }
+
+    100% {
+        transform: translateY(0);
+        padding-bottom: 9px;
+        opacity: 1;
+    }
+}
+
+
+
+
 
 #set {
     background-image: url(produktion/settings.svg);
@@ -45,12 +120,11 @@
     background-repeat: no-repeat;
     background-size: 100%;
     width: 80vw;
-    height: 100%;
+    height: 45vw;
     position: absolute;
     top: 4vw;
     left: 12vw;
     z-index: 6;
-    display: none;
 }
 
 #play2 {
@@ -58,7 +132,7 @@
     background-repeat: no-repeat;
     background-size: 100%;
     width: 14vw;
-    height: 10vw;
+    height: 7vw;
     z-index: 7;
     top: 36vw;
     left: 31vw;
@@ -66,25 +140,62 @@
 }
 
 #game {
-    position: relative;
+    position: absolute;
     width: 100vw;
-    height: 55vw;
+    height: 56.25vw;
 }
 
 #game_background {
     background-image: url("produktion/bagogforgrund.svg");
     background-size: cover;
     width: 100vw;
-    height: 55vw;
-    position: relative;
+    height: 56.25vw;
+    position: absolute;
     z-index: 0;
     overflow: hidden;
     margin: auto;
 }
 
 #game_elements {
-    position: relative;
+    position: absolute;
+    width: 100vw;
+    height: 56.25vw;
 }
+
+.fade_out {
+    animation-name: fade_out_kf;
+    animation-duration: 2s;
+    animation-fill-mode: forwards;
+    animation-iteration-count: 1;
+}
+
+@keyframes fade_out_kf {
+    0% {
+        opacity: 1;
+    }
+
+    100% {
+        opacity: 0;
+    }
+}
+
+.fade_in {
+    animation-name: fade_in_kf;
+    animation-duration: 2s;
+    animation-fill-mode: backwards;
+    animation-iteration-count: 1;
+}
+
+@keyframes fade_in_kf {
+    0% {
+        opacity: 0;
+    }
+
+    100% {
+        opacity: 1;
+    }
+}
+
 
 #oel {
     background-image: url("produktion/oel.svg");
@@ -92,9 +203,9 @@
     background-repeat: no-repeat;
     width: 10vw;
     height: 24vw;
-    position: relative;
-    left: 14vw;
-    bottom: 30vw;
+    position: absolute;
+    left: 13vw;
+    top: 25vw;
     z-index: 2;
 }
 
@@ -104,9 +215,9 @@
     background-repeat: no-repeat;
     width: 10vw;
     height: 24vw;
-    position: relative;
+    position: absolute;
     left: 30vw;
-    bottom: 53vw;
+    top: 26vw;
     z-index: 2;
 }
 
@@ -116,9 +227,9 @@
     background-repeat: no-repeat;
     width: 10vw;
     height: 24vw;
-    position: relative;
-    left: 38vw;
-    bottom: 90vw;
+    position: absolute;
+    left: 24vw;
+    top: 13vw;
     z-index: 2;
 }
 
@@ -128,9 +239,9 @@
     background-repeat: no-repeat;
     width: 10vw;
     height: 24vw;
-    position: relative;
+    position: absolute;
     left: 51vw;
-    bottom: 120vw;
+    top: 8vw;
     z-index: 2;
 }
 
@@ -140,9 +251,9 @@
     background-repeat: no-repeat;
     width: 10vw;
     height: 24vw;
-    position: relative;
+    position: absolute;
     left: 72vw;
-    bottom: 126vw;
+    top: 25vw;
     z-index: 2;
 }
 
@@ -152,9 +263,9 @@
     background-repeat: no-repeat;
     width: 10vw;
     height: 24vw;
-    position: relative;
+    position: absolute;
     left: 60vw;
-    bottom: 146vw;
+    top: 28vw;
     z-index: 2;
 }
 
@@ -164,9 +275,9 @@
     background-repeat: no-repeat;
     width: 10vw;
     height: 24vw;
-    position: relative;
+    position: absolute;
     left: 44vw;
-    bottom: 178vw;
+    top: 21vw;
     z-index: 3;
 }
 
@@ -176,9 +287,9 @@
     background-repeat: no-repeat;
     width: 10vw;
     height: 24vw;
-    position: relative;
-    left: 22vw;
-    bottom: 215vw;
+    position: absolute;
+    left: 67vw;
+    top: 9vw;
     z-index: 3;
 }
 
@@ -188,14 +299,18 @@
     background-repeat: no-repeat;
     width: 10vw;
     height: 24vw;
-    position: relative;
-    left: 67vw;
-    bottom: 239vw;
+    position: absolute;
+    left: 36vw;
+    top: 8vw;
     z-index: 3;
 }
 
 #game_ui {
-    position: relative;
+    position: absolute;
+    width: 100vw;
+    height: 56.25vw;
+    background-size: 100%;
+
 
 }
 
@@ -205,21 +320,33 @@
     background-repeat: no-repeat;
     width: 5vw;
     height: 25vw;
-    position: relative;
+    position: absolute;
     left: 90vw;
-    bottom: 255vw;
+    top: 18vw;
     z-index: 3;
 }
 
-#energy {
+#livrod {
     background-image: url(produktion/livroed.svg);
     background-size: 100%;
     background-repeat: no-repeat;
     width: 5vw;
-    height: 25vw;
-    position: relative;
+    height: 4vw;
+    position: absolute;
     left: 87vw;
-    bottom: 255vw;
+    top: 44vw;
+    z-index: 3;
+}
+
+#livsort {
+    background-image: url(produktion/livsort.svg);
+    background-size: 100%;
+    background-repeat: no-repeat;
+    width: 5vw;
+    height: 4vw;
+    position: absolute;
+    left: 93vw;
+    top: 44vw;
     z-index: 3;
 }
 
@@ -228,10 +355,10 @@
     background-size: 100%;
     background-repeat: no-repeat;
     width: 8vw;
-    height: 10vw;
-    position: relative;
-    bottom: 317vw;
+    height: 11vw;
+    position: absolute;
     left: 89vw;
+    top: 5vw;
     z-index: 3;
 }
 
@@ -240,12 +367,11 @@
     background-repeat: no-repeat;
     background-size: 100%;
     width: 80vw;
-    height: 100%;
+    height: 45vw;
     position: absolute;
     top: 4vw;
     left: 12vw;
     z-index: 6;
-    display: none;
 
 }
 
@@ -254,12 +380,11 @@
     background-repeat: no-repeat;
     background-size: 100%;
     width: 80vw;
-    height: 100%;
+    height: 45vw;
     position: absolute;
     top: 4vw;
     left: 12vw;
     z-index: 6;
-    display: none;
 
 }
 
@@ -306,7 +431,7 @@
     top: 4vw;
     left: 12vw;
     z-index: 6;
-    display: none;
+
 }
 
 #on {
@@ -329,4 +454,8 @@
     position: absolute;
     top: 24vw;
     left: 50vw;
+}
+
+.hide {
+    display: none;
 }
