--- a/style.css
+++ b/style.css
@@ -6,7 +6,7 @@
     position: relative;
 }
 
-#menu_background {
+#start {
     background-image: url(produktion/titelskaerm.svg);
     background-repeat: no-repeat;
     background-size: 100%;
@@ -26,6 +26,7 @@
     top: 24vw;
     left: 4vw;
     position: absolute;
+    display: block;
 }
 
 .shake {
@@ -99,23 +100,19 @@
     }
 }
 
-
-
-
-
 #set {
     background-image: url(produktion/settings.svg);
     background-repeat: no-repeat;
     background-size: 100%;
     width: 10vw;
-    height: 18vw;
+    height: 11vw;
     z-index: 7;
-    top: 38vw;
-    left: 9vw;
+    top: 43vw;
+    left: 3vw;
     position: absolute;
 }
 
-#start {
+#start_explain {
     background-image: url(produktion/start.svg);
     background-repeat: no-repeat;
     background-size: 100%;
@@ -127,6 +124,7 @@
     z-index: 6;
 }
 
+/*
 #play2 {
     background-image: url(produktion/play.svg);
     background-repeat: no-repeat;
@@ -138,6 +136,7 @@
     left: 31vw;
     position: absolute;
 }
+*/
 
 #game {
     position: absolute;
