--- a/style.css
+++ b/style.css
@@ -1,3 +1,11 @@
+* {
+    box-sizing: border-box;
+}
+
+body {
+    margin: 0;
+}
+
 #screen {
     width: 100vw;
     height: 56.25vw;
@@ -107,8 +115,8 @@
     width: 10vw;
     height: 11vw;
     z-index: 7;
-    top: 43vw;
-    left: 3vw;
+    top: 45vw;
+    left: 1vw;
     position: absolute;
 }
 
@@ -163,7 +171,7 @@
 
 .fade_out {
     animation-name: fade_out_kf;
-    animation-duration: 2s;
+    animation-duration: 1s;
     animation-fill-mode: forwards;
     animation-iteration-count: 1;
 }
@@ -239,8 +247,8 @@
     width: 10vw;
     height: 24vw;
     position: absolute;
-    left: 51vw;
-    top: 8vw;
+    left: 72vw;
+    top: 25vw;
     z-index: 2;
 }
 
@@ -251,8 +259,8 @@
     width: 10vw;
     height: 24vw;
     position: absolute;
-    left: 72vw;
-    top: 25vw;
+    left: 51vw;
+    top: 8vw;
     z-index: 2;
 }
 
@@ -287,7 +295,7 @@
     width: 10vw;
     height: 24vw;
     position: absolute;
-    left: 67vw;
+    left: 66vw;
     top: 9vw;
     z-index: 3;
 }
@@ -314,7 +322,7 @@
 }
 
 #points {
-    background-image: url("produktion/point.svg");
+    background-image: url("produktion/pts.svg");
     background-size: 100%;
     background-repeat: no-repeat;
     width: 5vw;
@@ -323,6 +331,15 @@
     left: 90vw;
     top: 18vw;
     z-index: 3;
+}
+
+#point {
+    position: absolute;
+    left: 0.75vw;
+    top: 8vw;
+    font-size: 3rem;
+    font-weight: 400;
+    color: yellow;
 }
 
 #livrod {
