--- a/style.css
+++ b/style.css
@@ -203,52 +203,63 @@ body {
     }
 }
 
-
-#oel {
-    background-image: url("produktion/oel.svg");
-    background-size: 100%;
-    background-repeat: no-repeat;
-    width: 10vw;
-    height: 24vw;
+.pos {
     position: absolute;
-    left: 13vw;
-    top: 25vw;
-    z-index: 2;
 }
 
-#saft {
+.pos1 {
+    left: 30vw;
+    top: 26vw;
+}
+
+.pos2 {
+    left: 51vw;
+    top: 8vw;
+}
+
+.pos3 {
+    left: 22vw;
+    top: 10vw;
+}
+
+.pos4 {
+    left: 60vw;
+    top: 28vw;
+}
+
+.pos5 {
+    left: 13vw;
+    top: 25vw;
+}
+
+.pos6 {
+    left: 72vw;
+    top: 25vw;
+}
+
+.pos7 {
+    left: 44vw;
+    top: 21vw;
+}
+
+.pos8 {
+    left: 66vw;
+    top: 9vw;
+}
+
+.pos9 {
+    left: 36vw;
+    top: 8vw;
+}
+
+
+.type2 {
     background-image: url("produktion/saft.svg");
     background-size: 100%;
     background-repeat: no-repeat;
     width: 10vw;
     height: 24vw;
     position: absolute;
-    left: 30vw;
-    top: 26vw;
-    z-index: 2;
-}
-
-#kaffe {
-    background-image: url("produktion/kaffe.svg");
-    background-size: 100%;
-    background-repeat: no-repeat;
-    width: 10vw;
-    height: 24vw;
-    position: absolute;
-    left: 24vw;
-    top: 13vw;
-    z-index: 2;
-}
-
-#oel2 {
-    background-image: url("produktion/oel.svg");
-    background-size: 100%;
-    background-repeat: no-repeat;
-    width: 10vw;
-    height: 24vw;
-    position: absolute;
-    left: 72vw;
-    top: 25vw;
     z-index: 2;
 }
 
@@ -259,8 +270,17 @@ body {
     width: 10vw;
     height: 24vw;
     position: absolute;
-    left: 51vw;
-    top: 8vw;
+    z-index: 2;
+}
+
+
+.type3 {
+    background-image: url("produktion/kaffe.svg");
+    background-size: 100%;
+    background-repeat: no-repeat;
+    width: 10vw;
+    height: 24vw;
+    position: absolute;
     z-index: 2;
 }
 
@@ -271,8 +291,26 @@ body {
     width: 10vw;
     height: 24vw;
     position: absolute;
-    left: 60vw;
-    top: 28vw;
+    z-index: 2;
+}
+
+.type1 {
+    background-image: url("produktion/oel.svg");
+    background-size: 100%;
+    background-repeat: no-repeat;
+    width: 10vw;
+    height: 24vw;
+    position: absolute;
+    z-index: 2;
+}
+
+#oel2 {
+    background-image: url("produktion/oel.svg");
+    background-size: 100%;
+    background-repeat: no-repeat;
+    width: 10vw;
+    height: 24vw;
+    position: absolute;
     z-index: 2;
 }
 
@@ -283,8 +321,6 @@ body {
     width: 10vw;
     height: 24vw;
     position: absolute;
-    left: 44vw;
-    top: 21vw;
     z-index: 3;
 }
 
@@ -295,8 +331,6 @@ body {
     width: 10vw;
     height: 24vw;
     position: absolute;
-    left: 66vw;
-    top: 9vw;
     z-index: 3;
 }
 
@@ -307,8 +341,6 @@ body {
     width: 10vw;
     height: 24vw;
     position: absolute;
-    left: 36vw;
-    top: 8vw;
     z-index: 3;
 }
 
